Fix front page on mobile

--- a/client/site.sass
+++ b/client/site.sass
@@ -176,6 +176,9 @@ $landing-color: #167475
         nav ul li a
             margin: 1rem 0.5rem 1rem
 
+        .jumbotron > .container .row
+            display: block
+
         .masthead h1
             font-size: 2rem
 
